--- a/src/_includes/pages/_index.njk
+++ b/src/_includes/pages/_index.njk
@@ -22,8 +22,12 @@ colorHeader: has-light-menu
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <h1 class="fluid-3-m">Todo lo que necesitas saber para crear un Design System eficiente: definición, beneficios y
-            cómo crearlo</h1>
+          <h1 class="fluid-3-m mb-16">Todo lo que necesitas saber para crear un Design System eficiente: 
+            
+       </h1>  <p class="h3">
+             Definición, beneficios y
+         cómo crearlo
+       </p>
         </div>
       </div>
     </div>
