--- a/src/_includes/pages/_index.njk
+++ b/src/_includes/pages/_index.njk
@@ -22,7 +22,7 @@ colorHeader: has-light-menu
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <h1 class="fluid-3-m mb-16">Todo lo que necesitas saber para crear un Design System eficiente: 
+          <h1 class="h1 mb-16">Todo lo que necesitas saber para crear un Design System eficiente: 
             
        </h1>  <p class="h3">
              Definición, beneficios y
@@ -36,7 +36,7 @@ colorHeader: has-light-menu
     <div class="container ">
       <div class="row">
         <div class="col-xs-12">
-          <h2 class="p1 mb-32 c-accent">
+          <h2 class="p1 mb-16 c-accent">
             ¿Qué es un Design System?
           </h2>
           <p class="h4 mb-64">
@@ -49,7 +49,7 @@ colorHeader: has-light-menu
             <div class="col-xs-7 col-sm-4">
               <p class="p2">
                 En pocas palabras, un Design System actúa como la “columna vertebral” de la identidad digital de una
-                marca, asegurando que todos los elementos —desde la tipografía hasta los componentes de interfaz—
+                marca, asegurando que todos los elementos 
                 trabajen de forma alineada y eficiente.
               </p>
             </div>
@@ -182,19 +182,23 @@ colorHeader: has-light-menu
       <div class="row">
         <div class="col-xs-12 col-sm-6"></div>
         <div class="col-xs-12 col-sm-6"> 
-          Su éxito radica en la colaboración y en la capacidad de adaptarse a las necesidades cambiantes del mercado y
-          de los usuarios.
-          Tanto si estás dando tus primeros pasos en la creación de un Design System como si buscas optimizar el que ya
-          tienes, es imprescindible mantenerlo documentado, colaborativo y flexible. Con ello, lograrás uniformidad en
-          la marca, reducir tiempos de producción y garantizar experiencias de usuario consistentes en todos los puntos
-          de contacto.</div>
+          <p class="p1">
+            Su éxito radica en la colaboración y en la capacidad de adaptarse a las necesidades cambiantes del mercado y
+            de los usuarios.
+            Tanto si estás dando tus primeros pasos en la creación de un Design System como si buscas optimizar el que ya
+            tienes, es imprescindible mantenerlo documentado, colaborativo y flexible. Con ello, lograrás uniformidad en
+            la marca, reducir tiempos de producción y garantizar experiencias de usuario consistentes en todos los puntos
+            de contacto.
+          </p>
+        
+        </div>
       </div>
     </div>
     </section>
 
 
     <section class="ptr-120 pbr-120 bg-light">
-      <div class="container">
+      <div class="container-3">
         <div class="row">
           <div class="col-xs-12 text-center pbr-120">
             <h3 class="h1">
@@ -286,7 +290,7 @@ colorHeader: has-light-menu
       <h6 class="h1 mb-32">Casos de uso y ejemplos de éxito</h6>
 
       
-      <p class="p1 mb-32">
+      <p class="h4 mb-32">
         Grandes plataformas de streaming que buscan mantener una experiencia unificada en sus apps móviles, aplicaciones para TV y sitio web.
         Tiendas en línea con múltiples páginas de producto y carritos de compra que necesitan estandarizar patrones de usabilidad y checkout.
         Aplicaciones internas corporativas donde varios equipos deben trabajar con los mismos componentes para asegurar la coherencia y el rendimiento.
@@ -296,33 +300,40 @@ colorHeader: has-light-menu
         En todos estos casos, un Design System robusto reduce la complejidad, aumenta la eficacia y garantiza la familiaridad del usuario con la interfaz.
         Mejores prácticas de implementación
       </p>
-
-
-      <h5 class="h6"> Crear un ambiente de pruebas y prototipos:</h5>
-
-    <p class="p2">Antes de lanzar los componentes a producción, pruébalos en escenarios reales y recopila feedback.</p>
-<br>
-
-      <h5 class="h6">Priorización de la accesibilidad:</h5>
-      
-      <p class="p2">Asegúrate de implementar buenas prácticas de accesibilidad (WCAG), como contraste adecuado y etiquetas semánticas.</p>
-      <br>
-
-      <h5 class="h6">
-        Automatización y control de versiones:
-        
-      </h5>
-      <p class="p2">Utiliza herramientas de automatización para generar documentación y mantener los componentes actualizados en tiempo real.</p>
-      <br>
-
-      <h5 class="h6">Formación y difusión interna:</h5>
-      
-      <p class="p2">Ofrece capacitación a los equipos para que entiendan la importancia y uso del Design System, fomentando su adopción.</p>
-      <br>
-
-      <h5 class="h6">Escuchar a la comunidad y a los usuarios finales:</h5>
-      
-      <p class="p2">Un Design System no es estático; evoluciona a medida que surgen nuevas necesidades de producto y tendencias de diseño.</p>
+<div class="row">
+  <div class="col-xs-12 col-sm-6">
+  
+  
+           <h5 class="h6 mb-16"> Crear un ambiente de pruebas y prototipos:</h5>
+  
+        <p class="p2">Antes de lanzar los componentes a producción, pruébalos en escenarios reales y recopila feedback.</p>
+    <br>
+  
+          <h5 class="h6 mb-16"> Priorización de la accesibilidad:</h5>
+  
+          <p class="p2">Asegúrate de implementar buenas prácticas de accesibilidad (WCAG), como contraste adecuado y etiquetas semánticas.</p>
+          <br>
+  
+           <h5 class="h6 mb-16">
+            Automatización y control de versiones:
+  
+          </h5>
+          <p class="p2">Utiliza herramientas de automatización para generar documentación y mantener los componentes actualizados en tiempo real.</p>
+          <br>
+  
+           <h5 class="h6 mb-16">Formación y difusión interna:</h5>
+  
+          <p class="p2">Ofrece capacitación a los equipos para que entiendan la importancia y uso del Design System, fomentando su adopción.</p>
+          <br>
+  
+           <h5 class="h6 mb-16">Escuchar a la comunidad y a los usuarios finales:</h5>
+  
+          <p class="p2">Un Design System no es estático; evoluciona a medida que surgen nuevas necesidades de producto y tendencias de diseño.</p>
+  
+  
+  </div>
+</div>
+   
     </div>
   </div>
 </section>
