--- a/src/assets/sass/abstract/_setup.scss
+++ b/src/assets/sass/abstract/_setup.scss
@@ -32,18 +32,21 @@ $c-bg-dark: var(--c-bg-dark);
 
 
 $minheaders:/* name:mobile,768,992,1280,line-height,font */ 
-  ( h1: ( 32px, 60px, .8, "bold", ), 
+  ( 
+    h1: ( 32px, 96px, .8, "medium", ), 
   h2: ( 24px, 42px, 1.1, "regular", ), 
-  h3: ( 32px, 48px, 1.1, "regular", ), 
-  h4: ( 24px, 34px, 1.1, "medium", ), 
+  h3: ( 20px, 48px, 1.1, "regular", ), 
+  h4: ( 24px, 34px, 1.1, "regular", ), 
   h5: ( 20px, 25px, 1.1, "regular", ), 
   h6: ( 20px, 32px, 1.1, "regular", ), 
 
 
-  p1: ( 14px, 32px, 1.1, "regular", ),
-  p2: ( 14px, 18px, 1.1, "regular", ),
-  p3: ( 12px, 12px, 1.4, "regular", ),
-  p4: ( 14px, 18px, 1.4, "medium", ), );
+  p1: ( 18px, 20px, 1.2, "regular", ),
+  p2: ( 16px, 18px, 1.3, "regular", ),
+
+  
+  
+  );
 
 
 $headersFluids: (
@@ -55,18 +58,17 @@ $headersFluids: (
   5: (30px, 48px, 1),
   4: (40px, 64px, 1),
   3: (40px, 72px, 1),
-  2: (40px, 100px, 0.9),
-  
-  1: (60px, 160px, 0.8)
+  2: (40px, 24px, 0.9),
+  1: (60px, 96px, 0.8)
 ) ;
 $font-family-a-l: "font-light", Helvetica, "Arial ", "Lucida Grande", sans-serif;
 $font-family-a-r: "font-regular", Helvetica, "Arial ", "Lucida Grande",
   sans-serif;
-$font-family-a-m: "font-regular", Helvetica, "Arial ", "Lucida Grande",
+$font-family-a-m: "font-medium", Helvetica, "Arial ", "Lucida Grande",
   sans-serif;
 $font-family-a-b: "font-bold", Helvetica, "Arial ", "Lucida Grande", sans-serif;
 $font-family-b-r: "font-regular", Helvetica, Arial, sans-serif;
-$font-family-b-m: "font-regular", Helvetica, "Arial", sans-serif;
+$font-family-b-m: "font-medium", Helvetica, "Arial", sans-serif;
 $font-family-b-b: "font-regular", Helvetica, "arial black", sans-serif;
 $font-family-c-r: "ms-serif", serif;
 $font-family-c-m: "ms-serif", serif;
