--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -1179,8 +1179,10 @@ margin-top: -100px;
 }
 
 .box{
-  width: 100px;
-  height: 100px;
+  aspect-ratio: 1 / 1;
+  max-width: 100px;
+  width: 100%;
+
   background-color: #101010;
   color: #ffffff;
   font-size: 40px;
@@ -1216,4 +1218,8 @@ width: 70vw;
   overflow: hidden;
   }
   
+}
+
+.h1,.h3{
+  letter-spacing: -0.03em;
 }
