--- a/src/_includes/pages/_index.njk
+++ b/src/_includes/pages/_index.njk
@@ -12,7 +12,7 @@ colorHeader: has-light-menu
     <div class="container ">
       <div class="row mb-64">
         <div class="col-xs-12">
-          <svg width="73" height="60" viewBox="0 0 73 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg width="50" height="60" viewBox="0 0 73 60" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M27.0257 60H7.03177C4.26425 60 2.4004 59.8028 1.44024 59.4085C0.480081 59.0141 0 58.3662 0 57.4648V4.14085C0 2.67606 0.621281 1.6338 1.86384 1.01409C3.1064 0.338029 5.25265 0 8.30257 0H27.3646C38.2088 0 45.6924 2.14085 49.8154 6.42254C53.9385 10.6479 56 18.3662 56 29.5775C56 40.7887 53.8538 48.6761 49.5613 53.2394C45.2688 57.7465 37.7569 60 27.0257 60ZM26.348 12.5915C24.9924 12.5915 24.0888 12.7042 23.6369 12.9296V47.0704L26.8563 47.4084C28.5507 47.4084 29.8215 46.0563 30.6687 43.3521C31.5724 40.6479 32.0242 35.9718 32.0242 29.3239C32.0242 22.6761 31.5724 18.2254 30.6687 15.9718C29.765 13.7183 28.3248 12.5915 26.348 12.5915Z" fill="white"/>
             <path d="M67.5859 13C66.2929 13 65.431 13.11 65 13.3301V46.6699L68.0707 47C69.6869 47 70.899 45.6796 71.7071 43.0388C72.569 40.3981 73 35.8317 73 29.3398C73 22.8479 72.569 18.5016 71.7071 16.301C70.8451 14.1003 69.4714 13 67.5859 13Z" fill="white"/>
             </svg>
@@ -22,7 +22,7 @@ colorHeader: has-light-menu
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <h1 class="h1 mb-16">Todo lo que necesitas saber para crear un Design System eficiente: 
+          <h1 class="h1 mb-16">Todo lo que necesitas saber para crear un Design System eficiente
             
        </h1>  <p class="h3">
              Definición, beneficios y
