--- a/src/assets/sass/base/_fonts.scss
+++ b/src/assets/sass/base/_fonts.scss
@@ -8,6 +8,7 @@
   font-family: "font-regular";
   src: url("/assets/fonts/satoshi/Satoshi-Regular.woff2") format("woff2"),
     url("/assets/fonts/satoshi/Satoshi-Regular.woff") format("woff");
+    font-display: swap;
 
 }
 @font-face {
