--- a/src/_includes/onepage/footer_2.njk
+++ b/src/_includes/onepage/footer_2.njk
@@ -18,7 +18,7 @@
 
 
       </div>
-      <div class="col-xs-12 col-sm-4  text-center sm:text-right   ">
+      <div class="col-xs-12 col-sm-4  text-center sm:text-right  has-light  ">
 
         <div class="p3 pt-8 ">
        {{global_index.footer_3}}
