--- a/src/_includes/layout/base.njk
+++ b/src/_includes/layout/base.njk
@@ -60,24 +60,14 @@
     })(window, document, 'script', 'dataLayer', '{{ global_index.tag_manager }}');
   </script>
   {% endif %}
+  
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "ProfessionalService",
-      "name": "DS Global",
-      "url": "https://designsystems.es",
-      "logo": "https://designsystems.es/assets/static/favicons/favicon-96x96.png",
-      "description": "DS Global, expertos en creación y gestión de Design Systems en Barcelona.",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Calle Creatividad, 123",
-        "addressLocality": "Barcelona",
-        "postalCode": "08037",
-        "addressCountry": "ES"
-      }
-
-
-      ]
+      "@type": "WebPage",
+      "name": "designsystems",
+      "description": "designsystems , expertos en creación y gestión de Design Systems en Barcelona.",
+      "url": "https://designsystems.es"
     }
     </script>
 </head>
