--- a/src/_includes/pages/_index.njk
+++ b/src/_includes/pages/_index.njk
@@ -23,11 +23,10 @@ colorHeader: has-light-menu
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <h1 class="h1 mb-16">Todo lo que necesitas saber para crear un Design System eficiente
+          <h1 class="h1 mb-16">Design Systems
             
        </h1>  <p class="h3">
-             Definición, beneficios y
-         cómo crearlo
+        Todo lo que necesitas saber para crear un Design System eficiente
        </p>
         </div>
       </div>
